6837472: com/sun/jdi/MonitorFrameInfo.java fails with AggressiveOpts in 6u14

Disable escape analysis when jvmti/debugger is used. Add support for EA ibto SA.

Reviewed-by: never